--- a/front/src/components/Sidebar/Sidebar.css
+++ b/front/src/components/Sidebar/Sidebar.css
@@ -20,7 +20,6 @@
   /* padding: 0 1rem; */
 }
 
-
 .sidebar-logo {
   width: 40px;
   height: 40px;
@@ -112,15 +111,15 @@
     padding: 110px 0;
 }
 
-.footer {
-    bottom:100;
-    font-family: 'Courier New', Courier;
-    font-weight: bold;
+.footerContainer {
+  font-family: 'Courier New', Courier;
+  font-weight: bold;
   font-size: 0.9rem;
   color: #bbb;
   text-align: left;
+  margin-top: auto;
+  padding-bottom: 2rem;
   margin-left: 30px;
-  /* margin-top: auto; */
 }
 
 .badge {
@@ -137,4 +136,44 @@
 
 .no-link-style:visited {
   text-decoration: none;
+}
+
+.login {
+  display:flex;
+  justify-content:center;
+  font-family: 'Courier New', Courier;
+  font-weight: bold;
+  font-size: 0.9rem;
+  width: 70%;
+  background-color: #e03e58;
+  border-radius: 4px;
+  border: 0;
+  box-shadow: rgba(1,60,136,.5) 0 -1px 3px 0 inset,rgba(82, 0, 97, 0.1) 0 3px 6px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inherit;
+  line-height: 24px;
+  margin: 0;
+  padding: 10px 43%;
+  position: relative;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  transition: all .2s cubic-bezier(.22, .61, .36, 1);
+}
+
+.login:hover {
+  background-color: #b9334a;
+  transform: translateY(-2px);
+}
+
+.loginContainer {
+  display:flex;
+  font-family: 'Courier New', Courier;
+  font-weight: bold;
+  font-size: 0.9rem;
+  margin-bottom: 5%;
 }
