--- a/front/src/styles/Discover.css
+++ b/front/src/styles/Discover.css
@@ -11,6 +11,9 @@
 
 .discover-top {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
 }
 
 .discover-main-content {
