--- a/front/src/routes/Forum/CreatePost/CreatePost.css
+++ b/front/src/routes/Forum/CreatePost/CreatePost.css
@@ -5,6 +5,12 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
+/* .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+} */
+
 .create-post-container {
     /* margin-top: 0; */
   margin-left: 230px; 
@@ -12,18 +18,74 @@
   background-color: #212129;
   min-height: 100vh;
   color: white;
+  display: flex;
+  justify-content: center;
+  position:300px
+  /* align-items: flex-start; */
 }
 
 .create-post-title {
     font-size: 2rem;
     margin-bottom: 1.5rem;
+    text-align: center;
 }
 
 .create-post-form {
     display: flex;
     flex-direction: column;
     gap:1rem;
+    width: 100%;
+    max-width: 640px;
 }
 
+.input-group {
+    position:relative; 
+}
 
+.title-input {
+  background-color: #3a3f56;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 1rem;
+  width: 100%;
+  font-size: 1.2rem;
+}
 
+.char-count {
+  position: absolute;
+  top: 170px;
+  right: 550px;
+  font-size: 0.8rem;
+  /* margin-bottom: 10px; */
+  color: #ccc;
+}
+
+.add-flair-btn {
+  background-color: #c9184a;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 0.4rem 1rem;
+  width: fit-content;
+}
+
+.body-textarea {
+  background-color: #3a3f56;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 1rem;
+  font-size: 1rem;
+  min-height: 200px;
+  resize: vertical;
+}
+
+.create-btn {
+  background-color: #c9184a;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 0.6rem 1.5rem;
+  align-self: flex-end;
+}
