--- a/front/src/styles/SongTemplate.css
+++ b/front/src/styles/SongTemplate.css
@@ -28,12 +28,18 @@
     object-fit: cover;
     border-radius: 10px;
 
+    margin:0;
+
     background: #D9D9D9;
+}
+
+.songTemplateImageContainer {
+    margin:0;
 }
 
 .songTemplateContainer {
     display:flex;
-    gap: 1rem;
+    gap: 0rem 1rem;
 }
 
 .songTemplateTextContainer {
