--- a/front/src/styles/Profile.css
+++ b/front/src/styles/Profile.css
@@ -447,3 +447,10 @@ html, body {
     transform: translateY(-2px);
     text-decoration: none;
 }
+
+.loadingCenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
