--- a/front/src/styles/Profile.css
+++ b/front/src/styles/Profile.css
@@ -15,11 +15,24 @@ html, body {
     background-color: #212129;
 }
 
-.loadingPage {
-    height:auto;
-    min-height: 100vh;
-    width:100vw;
-    background-color: #212129;
+.loadingCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.backgroundSpinner,
+.foregroundSpinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .profileOffset {
@@ -113,11 +126,12 @@ html, body {
     touch-action: manipulation;
     vertical-align: baseline;
     transition: all .2s cubic-bezier(.22, .61, .36, 1);
-}
-
-.profileEditLink {
     margin-left:25px;
 }
+
+/* .profileEditLink {
+    margin-left:25px;
+} */
 
 .profileEditButton:hover {
     background-color: #b9334a;
@@ -153,6 +167,7 @@ html, body {
     touch-action: manipulation;
     vertical-align: baseline;
     transition: all .2s cubic-bezier(.22, .61, .36, 1);
+    margin-left:25px;
 }
 
 .profileSaveButton:hover {
@@ -448,9 +463,34 @@ html, body {
     text-decoration: none;
 }
 
-.loadingCenter {
+.privateProfileContainer {
+    display: flex;
+    align-items: center;
+}
+
+.profileCenter {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:50vh;
+    font-size: 1rem;
+    font-family: 'Inter', sans-serif;
+
+    color: #FFFFFF;
+
+    padding-right:12rem;
+}
+
+.profileMustSignIn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 100vh;
+    width: 100%;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    font-size: 1rem;
+    font-family: 'Inter', sans-serif;
 }
