added useLocation hook to underline current route selected in Sidebar.  Fixed missing key in Discover.jsx

--- a/front/src/components/Sidebar/Sidebar.css
+++ b/front/src/components/Sidebar/Sidebar.css
@@ -102,6 +102,14 @@
   border-radius: 6px;
 }
 
+.section a.link-active {
+  background: none !important;
+  text-decoration: underline;
+  text-decoration-color: #c9184a;
+  text-underline-offset: 6px;
+  color: white !important;
+}
+
 .space-padding {
     padding: 8px 0;
 }
