--- a/front/src/styles/ArtistTemplate.css
+++ b/front/src/styles/ArtistTemplate.css
@@ -31,3 +31,16 @@
     background: #D9D9D9;
 
 }
+
+.artistTemplateContainer {
+    transition: all .2s cubic-bezier(.22, .61, .36, 1);
+    text-decoration: none;
+}
+
+.artistTemplateContainer:visited {
+    text-decoration: none;
+}
+
+.artistTemplateContainer:hover {
+    transform: translateY(-6px);
+}
