--- a/front/src/styles/Profile.css
+++ b/front/src/styles/Profile.css
@@ -9,7 +9,7 @@ html, body {
 .main-content {
     height:auto;
     min-height: 100vh;
-    width:100vw;
+    width:calc(100vw - 240px);
     margin-left: 240px;
     padding: 1rem 4rem;
     background-color: #212129;
@@ -192,7 +192,7 @@ html, body {
 
 .artistsContainer {
     margin: 2rem 0rem;
-    max-width: calc(100% - 240px);
+    max-width: calc(100vw - 240px);
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -202,7 +202,6 @@ html, body {
     margin: 1rem 0rem;
     display:flex; 
     flex-wrap: wrap;
-    padding-right: 3rem;
     gap: 2rem 4.5rem;
 }
 
