--- a/front/src/routes/Forum/PostDetail/PostDetail.css
+++ b/front/src/routes/Forum/PostDetail/PostDetail.css
@@ -55,6 +55,10 @@
     margin-top: 15px;
 }
 
+.post-header2 {
+    margin-bottom: 8px;
+}
+
 
 .comment-input {
     position: absolute;
@@ -73,21 +77,26 @@
   opacity: 1; 
 }
 
-.create-btn {
-    position:absolute;
-    right:460px;
-    top:300px;
+.create-btn3 {
+    position:relative;
+    right:-1320px;
+    bottom:-80px;
+    background-color: #c9184a;
+  color: white;
+  padding: 0.5rem 1.25rem;
+  border: none;
+  border-radius: 25px;
 }
 
-.comment-list {
+.comment {
   background-color: #3a3f56;
   padding: 1rem;
   border-radius: 20px;
   width: 100%;
   max-width: 1100px;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   line-height: 1.5;
-  position:absolute;
-  left:585px;
-  top:350px;
+  position:relative;
+  left:320px;
+  top:120px;
 }
